<resources>
    <string name="app_name">JABtalk FMV</string>
    <string name="browser_activity">Browser</string>
    <string name="preference_activity">Preferences</string>
    <string name="button_finish">Finish</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_close">Close</string>
    <string name="button_speak">Speak</string>
    <string name="button_clear">Clear</string>
	<string name="dialog_title_new_features">New JABtalk Features</string>
    <string name="dialog_title_delete_confirmation">Delete Confirmation</string>
    <string name="dialog_message_delete_category">Are you sure you want to delete this category and all associated subcategories and words?</string>
    <string name="dialog_message_delete_word">Are you sure you want to delete this word?</string>
    <string name="dialog_message_restoring">Restoring data&#8230;</string>
    <string name="dialog_message_backup">Backing up data&#8230;</string>
    <string name="dialog_message_saving">Saving changes&#8230;</string>
    <string name="dialog_title_error">Error</string>
    <string name="empty_category"><b>Welcome to JABtalk!</b>\n\n<b><u>Tap here</u></b> to get started adding words and categories.</string>
    <string name="empty_word">There are no words configured for this category.\n<b><u>Tap here</u></b> to access the manage screen and add new words.</string>
    <string name="websiteNeedHelp">View our tutorials at www.jabstone.com/videos</string>
    <string name="copy_error_source_not_found">The item you are trying to copy could not be found.</string>
    <string name="cut_error_invalid_target">Sorry, you cannot move an item to itself.</string>
    <string name="cut_error_invalid_target_for_source">Sorry, you cannot move a word to the category list.</string>
    <string name="sentence_board_tip">Drag word downward to remove</string>
	<string name="dialog_title_item_move">Move&#8230;</string>
    <string name="dialog_item_move_up">Move Up</string>
    <string name="dialog_item_move_down">Move Down</string>
    <string name="dialog_item_move_beginning">Move to Beginning</string>
    <string name="dialog_item_move_end">Move to End</string>
    <string name="button_view_log">View Error Log</string>
    <string name="button_start_recording">Start Recording</string>
    <string name="button_stop_recording">Stop Recording</string>
    <string name="manage_activity_title">Manage</string>
    <string name="manage_activity_hidden_item">Hidden from view</string>
    <string name="manage_activity_category_actions">Category Actions</string>
    <string name="ideogram_activity_title_insert_category">Add New Category</string>
    <string name="ideogram_activity_title_update_category">Edit Category</string>
    <string name="ideogram_activity_title_insert_word">Add New Word</string>
    <string name="ideogram_activity_title_update_word">Edit Word</string>
    <string name="ideogram_activity_category_label_hint">Enter category label</string>
    <string name="ideogram_activity_word_label_hint">Enter word label</string>
    <string name="ideogram_activity_phrase_hint">Enter display phrase</string>
    <string name="ideogram_activity_check_hidden">Hide this item from view</string>
    <string name="ideogram_activity_word_label">Word label</string>
    <string name="ideogram_activity_button_preview">Click image for preview</string>
    <string name="dialog_title_image_source">Select image source</string>
    <string name="dialog_item_imagesource_camera">Camera</string>
    <string name="dialog_item_import">Import from device</string>
    <string name="dialog_item_import_web">Download from Internet</string>
    <string name="dialog_item_import_open_symbols">Download pictogram from ARASAAC</string>
    <string name="ideogram_activity_button_export_audio">Export audio</string>
    <string name="export_audio_no_file">No audio file to export.</string>
    <string name="export_audio_success">Audio exported</string>
    <string name="export_audio_failed">Export failed: %1$s</string>
    <string name="dialog_item_imagesource_text">Text button</string>
    <string name="dialog_title_audio_source">Select audio source</string>
    <string name="dialog_item_audiosource_recorder">Audio Recorder</string>
    <string name="dialog_item_audiosource_recorder_clean">Clean Audio Recorder</string>
    <string name="dialog_item_audiosource_synthesizer">Speech Synthesizer</string>
    <string name="dialog_title_save_results">Save Results</string>
    <string name="dialog_message_invalid_label">Please enter a label</string>
    <string name="dialog_message_invalid_phrase">Please enter a display phrase</string>
    <string name="dialog_message_invalid_picture">Please select an image</string>
	<string name="dialog_title_invalid_field">Invalid Field</string>
	<string name="dialog_message_invald_image_format">The selected image format is not compatible with JABtalk. Please select a different file.</string>
	<string name="dialog_message_invald_audio_format">The selected audio format is not compatible with JABtalk. Please select a different file.</string>
	<string name="dialog_title_missing_speech_data">Missing Language Files</string>
	<string name="dialog_message_missing_speech_data">It appears your device does not have the required Text-to-Speech language files installed.  Would you like to install them now?</string>
    <string name="dialog_item_add_category">Add New Category</string>
    <string name="dialog_item_add_word">Add Word</string>
    <string name="dialog_title_restore_dataset">Restore Backup</string>
    <string name="dialog_title_backup_results">Backup Results</string>
    <string name="dialog_title_restore_results">Restore Results</string>
    <string name="dialog_message_backup_success">Your dataset has been successfully saved</string>
    <string name="dialog_title_manage_challenge">Access Manage Screen</string>
    <string name="dialog_message_manage_unlock_question">Please enter %1$s to access the manage screen</string>
    <string name="dialog_message_manage_challenge_incorrect">Incorrect. Please try again.</string>
    <string name="dialog_message_leave_screen">Are you sure you want to exit the manage screen?</string>
    <string name="dialog_title_exit_warning">Exit Confirmation</string>
    <string name="dialog_message_browser_unsupported_image_type">The selected image could not be loaded. Please try again in a few seconds or try downloading the thumbnail image from the search results page instead.</string>
    <string name="dialog_item_no_audio">No Audio</string>
    <string name="dialog_title_backup_save_as">Backup All Data</string>
    <string name="dialog_message_backup_save_as">Enter a name for the backup file. Existing files with the same name will be overwritten.</string>
    <string name="dialog_message_backup_invalid_filename">Backup files must be named with a .bak file extension</string>
    <string name="dialog_restore_error">An error occurred while restoring your backup file. View the error log for details.</string>
    <string name="dialog_permission_explanation_title">JABtalk Request</string>
    <string name="dialog_permission_explanation_audio_message">JABtalk needs permission to your microphone for recording audio.</string>
    <string name="dialog_permission_explanation_camera_message">JABtalk needs permission to your camera for capturing images.</string>
    <string name="dialog_label_backup_extension_bak">.bak</string>
    <string name="dialog_title_backup_partial_save_as">Backup Category</string>
    <string name="dialog_label_restore_overwrite">Delete existing data set?</string>
    <string name="dialog_label_restore_keep_stats">Keep existing play stats?</string>
    <string name="dialog_title_no_image_app">Image App Not Found</string>
    <string name="dialog_message_no_image_app">Please download an image viewing app to import images from your device. For example, QuickPic Gallery from the Google Play store.</string>
    <string name="dialog_title_no_camera_app">Camera App Not Found</string>
    <string name="dialog_message_no_camera_app">Please download a camera app before using the camera feature.</string>
    <string name="dialog_title_no_audio_app">Audio App Not Found</string>
    <string name="dialog_message_no_audio_app">Please download an audio file picker app before using the audio import feature.</string>
    <string name="dialog_message_downloading_audio">Downloading audio&#8230;</string>
	<string name="progress_loading">Loading&#8230;</string>
	<string name="progress_downloading_image">Downloading image&#8230;</string>
	<string name="download_hint">Touch and hold image to display Download Image option</string>
	<string name="google_image_search_url">https://www.google.com/search?hl=en&amp;site=imghp&amp;tbm=isch&amp;sa=1&amp;q=</string>
	<string name="open_symbols_search_url">https://arasaac.org/pictograms/search/TERM</string>
    <string name="menu_history">History</string>
    <string name="menu_log">Log</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="menu_clear_log">Clear Log</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_unhide">Unhide</string>
    <string name="toast_tile_hidden">\"%1$s\" hidden</string>
    <string name="toast_tile_visible">\"%1$s\" visible</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_share_app">Share JABtalk FMV</string>
    <string name="menu_teacher_share">Teacher share</string>
    <string name="teacher_share_chooser_title">Share vocabulary</string>
    <string name="teacher_share_preparing">Preparing vocabulary…</string>
    <string name="teacher_share_failed">Could not prepare vocabulary: %1$s</string>
    <string name="menu_about">About JABtalk FMV</string>
    <string name="about_version_fmt">v%1$s</string>
    <string name="about_description">JABtalk is an assistive communication (AAC) app originally created by JABstone LLC to help non-verbal children and adults express themselves through pictures and audio. It gives caregivers and therapists a simple way to build a personalized vocabulary of tiles, each with an image, a label, and a spoken phrase.</string>
    <string name="about_fork">JABtalk FMV is a community fork maintained by a parent of a child on the autism spectrum. The goal of this fork is to fix long-standing issues and add small but meaningful improvements — grid layout fixes, silence-trimming for recordings, cloud-folder backup, tile play statistics, sentence combos, image cropping, ARASAAC pictogram integration, and more.</string>
    <string name="about_support">Support / Report an issue</string>
    <string name="about_check_updates">Check for updates</string>
    <string name="about_checking">Checking for updates…</string>
    <string name="about_up_to_date">You are on the latest version.</string>
    <string name="about_update_available">A newer version is available: %1$s.\nTap "Open releases" to download.</string>
    <string name="stats_section_words">Top 10 words</string>
    <string name="stats_section_sentences">Top 10 sentences</string>
    <string name="stats_section_bigrams">Top 10 word pairs</string>
    <string name="stats_view_all">View all →</string>
    <string name="stats_col_count">Plays</string>
    <string name="stats_filter_month">Month</string>
    <string name="stats_empty">No data yet</string>
</resources>